# kvpy-group-trading-system

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  GUIDE.md  LICENSE  Procfile  README.md  fly.toml  pyproject.toml  render.yaml  vercel.json
.github/workflows/: ci.yml  scorecard.yml
data/: asset_scores.db
public/: index.html  scorecard.json
src/asset_scorer/: __init__.py  cli.py  config.py  engine.py
src/asset_scorer/backtest/: __init__.py  metrics.py  scorecard.py  walkforward.py
src/asset_scorer/calibration/: __init__.py  confidence.py
src/asset_scorer/data/: __init__.py  enrich.py  equity.py  provider.py  providers.py
src/asset_scorer/factors/: __init__.py  base.py  fundamentals.py  indicators.py  news.py  orderflow.py  ta.py  technicals.py
src/asset_scorer/scoring/: __init__.py  antibubble.py  bubble_detector.py  composite.py  normalize.py  recommend.py  regime.py  weights.py
src/asset_scorer/storage/: __init__.py  store.py
src/asset_scorer/web/: __init__.py  app.py
src/asset_scorer/web/static/: index.html  scorecard.html
